fix cart colors fix contact form sent message

--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -16,7 +16,7 @@
     
 .cart-holder
   -webkit-overflow-scrolling: touch
-  background-color: inherit
+  background-color: $background-color
   height: auto
   left: 0
   max-height: 100vh
