--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -29,6 +29,9 @@ body
   &#product
     background-color: $product-page-background-color
     color: $product-page-text-color
+    
+    .cart-link
+      color: $product-page-background-color
 
   &.overlay-open
     overflow: hidden
