--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -117,8 +117,8 @@
   line-height: 40px
   position: absolute
   top: calc(100vh + 200px)
-  max-width: calc(800px + 14vw)
-  padding: 0 7vw 200px
+  max-width: 900px
+  padding: 0 50px 200px
   width: 100%
   
   @media screen and (max-width: $break-medium)
