--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -491,8 +491,12 @@ header
     padding: 50px 0
     width: 100%
     
+    @media screen and (max-width: $break-medium)
+      margin-top: 100px
+    
     &.centered-content 
       +justify-content(center)
+      margin-top: 100px
       max-width: 800px
 
 .categories-list
