--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -64,6 +64,7 @@
     
 .product-card-spacer
   height: 30vh
+  width: 100%
   
   @media screen and (max-width: $break-small)
     height: 15vh
@@ -80,14 +81,13 @@
   display: block
   width: 100%
   
-.spinner 
-  width: 40px
+.spinner
+  +animation(sk-scaleout 1s infinite ease-in-out)
+  background-color: $button-background-color
+  border-radius: 100%
   height: 40px
   margin: 200px auto
-  background-color: #111
-  border-radius: 100%
-  -webkit-animation: sk-scaleout 1.0s infinite ease-in-out
-  animation: sk-scaleout 1.0s infinite ease-in-out
+  width: 40px
 
 @-webkit-keyframes sk-scaleout
   0%
@@ -109,5 +109,10 @@
   font-size: 16px
   text-align: center
 
+.no-products-found
+  font-size: 20px
+  text-align: center
+  
 .pagination
   display: none
+  
