Implement new method of hiding/showing product titles
- Remove inview
- Use regular Waypoints with offset

--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -36,6 +36,9 @@
     
     @media screen and (max-width: $break-large)
       font-size: 72px
+      
+    @media screen and (max-width: $break-large) and (orientation: landscape)
+      font-size: 64px
     
     @media screen and (max-width: $break-medium)
       font-size: 64px
