Update infinite-scroll code
Start getting infinite-scroll closer to working again
Update ul, ol page styles

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -329,6 +329,11 @@ header
   p
     margin: 0 0 1em 0
   
+  ol, ul
+    list-style: inherit
+    margin: 1em 0
+    padding: 0 0 0 25px
+    
 .empty-container
   flex: 1 0 200px
   
