--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -137,6 +137,11 @@
   img, iframe
     display: block
     max-width: 100%
+    
+  ol, ul
+    list-style: inherit
+    margin: 1em 0
+    padding: 0 0 0 25px
 
 .product-form
   .options-list
