--- a/source/stylesheets/contact.sass
+++ b/source/stylesheets/contact.sass
@@ -10,9 +10,10 @@
   
   input, textarea
     appearance: none
-    background: none
+    background-color: $background-color
     border: none
     border-bottom: 1px solid $text-color
+    color: $text-color
     font-size: 15px
     padding: 12px 0
     width: 100%
