update elements to grow cursor on hover announcement bar improvements

--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -9,6 +9,9 @@ $product-page-text-color: #{"{{ theme.product_page_text_color }}"}
 $button-background-color: #{"{{ theme.button_background_color }}"}
 $button-text-color: #{"{{ theme.button_text_color }}"}
 
+$announcement-background-color: #{"{{ theme.announcement_background_color }}"}
+$announcement-text-color: #{"{{ theme.announcement_text_color }}"}
+
 $error-text: #{"{{ theme.error_text_color }}"}
 
 $primary-font: #{"{{ theme.primary_font | font_family }}"}
