--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -21,7 +21,7 @@
   left: 0
   max-height: 100vh
   overflow-y: auto
-  padding: 0 50px 64px
+  padding-bottom: 64px
   position: fixed
   top: 0
   width: 100%
@@ -29,10 +29,7 @@
   
   @media screen and (max-width: $break-medium) and (orientation: portrait)
     height: 100vh
-    
-  @media screen and (max-width: $break-small)
-    padding: 0 20px 32px
-  
+
   header
     padding: 0
     position: relative
@@ -44,9 +41,24 @@
     font-size: 40px
     
 .cart-content
-  margin: 32px auto
+  margin: 0 auto 32px
   max-width: 800px
   width: 100%
+  
+  @media screen and (max-width: $break-small)
+    padding: 0 20px 32px
+  
+.cart-empty-message
+  font-size: 20px
+  line-height: 30px
+  text-align: center
+  
+  @media screen and (max-width: $break-small)
+    font-size: 14px
+    line-height: 24px
+    
+  a
+    text-decoration: underline
 
 .cart-items
   border-bottom: 1px solid $button-background-color
