--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -49,7 +49,7 @@
     margin: 200px
     width: calc(100% - 400px)
     
-    @media screen and (max-width: $break-medium) and (orientation: portrait)
+    @media screen and (max-width: $break-medium)
       height: auto
       margin: 0
       width: 100%
@@ -115,10 +115,11 @@
   font-size: 24px
   left: 50%
   line-height: 40px
+  max-width: 900px
+  min-height: calc(100vh - 200px)
+  padding: 0 50px 200px
   position: absolute
   top: calc(100vh + 200px)
-  max-width: 900px
-  padding: 0 50px 200px
   width: 100%
   
   @media screen and (max-width: $break-medium)
