--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -144,6 +144,9 @@
 .checkout-btn
   margin-top: 32px
   
+  @media screen and (max-width: $break-small)
+    font-size: 14px
+  
   @media screen and (max-width: $break-medium) and (orientation: portrait)
     bottom: 0
     left: 0
