--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -27,6 +27,12 @@
     
     &.multiple-product-images
       margin-bottom: 70px
+
+        
+@supports (object-fit: cover)
+  .product-images:before
+    content: "objectfit"
+    display: none
       
 .product-image
   left: 0
