update primary/secondary fonts

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -90,7 +90,7 @@ input, textarea
   border-bottom: 1px solid $text-color
   border-radius: 0
   color: $text-color
-  font-family: $primary-font
+  font-family: $secondary-font
   font-size: 15px
   padding: 12px 0
   width: 100%
@@ -105,7 +105,7 @@ ol, ul
 
 .errors
   color: $error-text
-  font-family: $primary-font
+  font-family: $secondary-font
   font-size: 16px
   line-height: 24px
   list-style: none
@@ -161,6 +161,7 @@ ol, ul
     border-radius: 100%
     color: $background-color
     display: block
+    font-family: $secondary-font
     height: 40px
     font-size: 12px
     line-height: 40px
@@ -212,6 +213,7 @@ ol, ul
 
 .open-category-nav
   display: block
+  font-family: $secondary-font
   font-size: 16px
   
   @media screen and (max-width: $break-small)
@@ -322,6 +324,7 @@ ol, ul
     padding-top: 0
 
 .custom-page-title
+  font-family: $primary-font
   font-size: 32px
   line-height: 1.2em
   margin-bottom: 40px
@@ -331,6 +334,7 @@ ol, ul
     font-size: 24px
     
 .custom-page-content
+  font-family: $secondary-font
   margin: 0 auto
   max-width: 960px
   padding: 0 60px
@@ -416,6 +420,7 @@ ol, ul
   background-color: $button-background-color
   border-radius: 50%
   color: $button-text-color
+  font-family: $secondary-font
   font-size: 16px
   line-height: 120px
   opacity: 1
@@ -541,9 +546,11 @@ ol, ul
       margin-bottom: 12px
 
 .social-links
+  font-family: $secondary-font
   font-size: 14px
   
 .credit
+  font-family: $secondary-font
   font-size: 10px
   line-height: 14px
   text-align: center
@@ -563,7 +570,7 @@ ol, ul
   border-radius: 0
   color: $button-text-color
   display: inline-block
-  font-family: $primary-font
+  font-family: $secondary-font
   font-size: 16px
   height: 60px
   line-height: 60px
