--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -118,6 +118,7 @@
     
 .product-description
   +transform(translateX(-50%))
+  font-family: $secondary-font
   font-size: 24px
   left: 50%
   line-height: 40px
@@ -208,6 +209,7 @@
   text-align: center
   
 .mobile-product-subtitle
+  font-family: $secondary-font
   font-size: 16px
   margin-top: 20px
 
