--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -68,6 +68,7 @@
   +flex-direction(row)
   +align-items(center)
   border-top: 1px solid $button-background-color
+  font-family: $secondary-font
   font-size: 16px
   padding: 24px 0
   
@@ -84,6 +85,9 @@
 .item-details
   line-height: 1.5em
   padding: 0 24px
+  
+.item-details-name
+  font-family: $primary-font
   
 .item-quantity-holder
   +flexbox
