--- a/source/stylesheets/contact.sass
+++ b/source/stylesheets/contact.sass
@@ -2,7 +2,7 @@
 
 .contact-label
   display: block
-  font-family: $primary-font
+  font-family: $secondary-font
   font-size: 16px
   
 .contact-form
