--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -21,6 +21,7 @@
     max-width: 60%
   
   .product-status
+    font-family: $secondary-font
     font-size: 24px
     line-height: 30px
     
@@ -109,6 +110,7 @@
     opacity: 0
 
 .infinite-scroll-last
+  font-family: $secondary-font
   font-size: 16px
   text-align: center
 
