Update some minor spacing and text items

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -83,6 +83,9 @@ a
   color: $text-color
   text-decoration: none
 
+h1, h2, h3, h4, h5, h6
+  font-weight: normal
+  
 input, textarea
   appearance: none
   background-color: $background-color
@@ -550,6 +553,8 @@ ol, ul
 .social-links
   font-family: $secondary-font
   font-size: 14px
+  line-height: 24px
+  margin: 32px 0
   
 .credit
   font-family: $secondary-font
