--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -112,6 +112,7 @@
 .infinite-scroll-last
   font-family: $secondary-font
   font-size: 16px
+  margin: 10vh auto
   text-align: center
 
 .no-products-found
