--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -22,8 +22,11 @@ body
   padding: 0
   width: 100%
   
-  &.show-cursor *
+  &.show-cursor 
     cursor: none !important
+  	
+    *
+      cursor: none !important
     
   &#product
     background-color: $product-page-background-color
