Update option title line height

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -188,6 +188,7 @@
   color: $text-color
   font-family: $secondary-font
   font-size: 32px
+  line-height: 38px
   margin-bottom: 25px
   text-align: center
 
