--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -279,3 +279,16 @@
 
   @media screen and (max-width: $break-medium) and (orientation: portrait)
     padding: 0
+
+.reset-selection-button-container
+  text-align: center
+  width: 100%
+
+button.reset-selection-button
+  display: none
+  height: auto
+  max-width: 100%
+  line-height: normal
+  margin: 20px auto 0
+  padding: 8px !important
+  width: auto
