Instant checkout updates
This adds theme styling for the instant checkout button for Parade

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -292,3 +292,6 @@ button.reset-selection-button
   margin: 20px auto 0
   padding: 8px !important
   width: auto
+
+#instant-checkout-button
+  margin-top: 12px
